## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

renderer_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

renderer_data_DATA = \
	AVTransport.xml\
	ConnectionManager.xml\
	RendererControl.xml\
	upnpmplayer.gif

EXTRA_DIST = $(renderer_data_DATA)
