## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -I../include

AM_CFLAGS =\
	 -Wall\
	 -g

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = renderer

renderer_SOURCES = \
	cAVTransport.cc\
	cConnectionManager.cc\
	cRenderer.cc\
	cRenderingControl.cc\
	cService.cc\
	renderer.cc

renderer_LDFLAGS = 

renderer_LDADD = \
	 -lupnp -luuid

